7901728: jtreg needs to support new "long form" JDK options